为文件添加版本号，防止缓存问题

--- a/ncm_api_package_v2/ncm/api/templates/index.html
+++ b/ncm_api_package_v2/ncm/api/templates/index.html
@@ -278,7 +278,7 @@
         </div>
     </div>
 
-    <script src="/static/js/app.js"></script>
+    <script src="/static/js/app.js?v=20260111"></script>
 
     <!-- Floating Video Window -->
     <div id="floatingVideo" class="floating-video">
