--- a/ncm_api_package_v2/ncm/api/templates/index.html
+++ b/ncm_api_package_v2/ncm/api/templates/index.html
@@ -235,7 +235,7 @@
                         <svg width="14" height="14" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M8 5v14l11-7z"/></svg> 播放全部
                     </button>
                 </div>
-                <div id="playlistSongList" class="playlist-list">
+                <div id="playlistSongList" class="song-list">
                     <!-- Playlist songs will be injected here -->
                 </div>
             </div>
