--- a/ncm_api_package_v2/ncm/api/templates/index.html
+++ b/ncm_api_package_v2/ncm/api/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NCM Video Service</title>
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css?v=20260111002">
 </head>
 <body>
 
@@ -281,7 +281,7 @@
         </div>
     </div>
 
-    <script src="/static/js/app.js?v=20260111"></script>
+    <script src="/static/js/app.js?v=20260111002"></script>
 
     <!-- Floating Video Window -->
     <div id="floatingVideo" class="floating-video">
